--- a/src/JavaFX/MojaBiblioteczka/Bundles/messages_pl.properties
+++ b/src/JavaFX/MojaBiblioteczka/Bundles/messages_pl.properties
@@ -1,4 +1,5 @@
 library=Biblioteka
 list.of.books=Lista Ksi\u0105\u017Cek
 stats=Statystyka
+add.book=Dodaj ksi\u0105\u017Ck\u0119
 title.application=Moje ksi\u0105\u017Cki
