Moja biblioteczka - Lesson 29 - Alerts (dialogs windows)

--- a/src/JavaFX/MojaBiblioteczka/Bundles/messages.properties
+++ b/src/JavaFX/MojaBiblioteczka/Bundles/messages.properties
@@ -16,3 +16,11 @@ alwaysOnTop=Always on top
 #
 help=Help
 about=About
+
+#Dialogs
+about.title=About...
+about.header=My Library, version 1.0
+about.content=My Java exercise based on youTube channel "ZacznijProgramowac"
+
+exit.title=Close?
+exit.header=Are you sure you want to close program?
