--- a/src/JavaFX/MojaBiblioteczka/Bundles/messages_pl.properties
+++ b/src/JavaFX/MojaBiblioteczka/Bundles/messages_pl.properties
@@ -16,3 +16,11 @@ alwaysOnTop=Zawsze na wierzchu
 #
 help=Pomoc
 about=O aplikacji
+
+#Dialogs
+about.title=O aplikacji
+about.header=Moja biblioteczka, wersja 1.0
+about.content=Moje \u0107wiczenie w jawie na podstawie kana\u0142u youtube "ZacznijProgramowac".
+
+exit.title=Zamkn\u0105\u0107?
+exit.header=Czy na pewno chcesz zamkn\u0105\u0107 ten program?
