Moja biblioteczka - Lesson 30 - Code refactoring and own error alert

--- a/src/JavaFX/MojaBiblioteczka/Bundles/messages.properties
+++ b/src/JavaFX/MojaBiblioteczka/Bundles/messages.properties
@@ -17,10 +17,13 @@ alwaysOnTop=Always on top
 help=Help
 about=About
 
-#Dialogs
+#Utils
 about.title=About...
 about.header=My Library, version 1.0
 about.content=My Java exercise based on youTube channel "ZacznijProgramowac"
 
 exit.title=Close?
 exit.header=Are you sure you want to close program?
+
+error.title=Error!
+error.header=Something is wrong!
