--- a/src/JavaFX/MojaBiblioteczka/Bundles/messages_pl.properties
+++ b/src/JavaFX/MojaBiblioteczka/Bundles/messages_pl.properties
@@ -17,10 +17,13 @@ alwaysOnTop=Zawsze na wierzchu
 help=Pomoc
 about=O aplikacji
 
-#Dialogs
+#Utils
 about.title=O aplikacji
 about.header=Moja biblioteczka, wersja 1.0
 about.content=Moje \u0107wiczenie w jawie na podstawie kana\u0142u youtube "ZacznijProgramowac".
 
 exit.title=Zamkn\u0105\u0107?
 exit.header=Czy na pewno chcesz zamkn\u0105\u0107 ten program?
+
+error.title=B\u0142\u0105d!
+error.header=Uwaga! Co\u015B posz\u0142o nie tak...
