Moja biblioteczka - lesson 33 (add category)

--- a/src/main/resources/JavaFX/MojaBiblioteczka/Bundles/messages.properties
+++ b/src/main/resources/JavaFX/MojaBiblioteczka/Bundles/messages.properties
@@ -3,6 +3,12 @@ list.of.books=List of books
 stats=Statistics
 add.book=Add book
 title.application=My Books
+add.button=Add
+
+#Categories
+add.category=Add category
+choose.category=Choose category
+
 
 #MenuBar
 #
