--- a/src/main/resources/JavaFX/MojaBiblioteczka/Bundles/messages_pl.properties
+++ b/src/main/resources/JavaFX/MojaBiblioteczka/Bundles/messages_pl.properties
@@ -3,6 +3,12 @@ list.of.books=Lista Ksi\u0105\u017Cek
 stats=Statystyka
 add.book=Dodaj ksi\u0105\u017Ck\u0119
 title.application=Moje ksi\u0105\u017Cki
+add.button=Dodaj
+
+#Categories
+add.category=Dodaj kategori\u0119
+choose.category=Wybierz kategori\u0119
+
 
 #MenuBar
 #
