Moja biblioteczka - lesson 35 (ComboBox)

--- a/src/main/resources/JavaFX/MojaBiblioteczka/Bundles/messages.properties
+++ b/src/main/resources/JavaFX/MojaBiblioteczka/Bundles/messages.properties
@@ -4,6 +4,7 @@ stats=Statistics
 add.book=Add book
 title.application=My Books
 add.button=Add
+delete.button=Delete
 
 #Categories
 add.category=Add category
