--- a/src/main/resources/JavaFX/MojaBiblioteczka/Bundles/messages_pl.properties
+++ b/src/main/resources/JavaFX/MojaBiblioteczka/Bundles/messages_pl.properties
@@ -4,6 +4,7 @@ stats=Statystyka
 add.book=Dodaj ksi\u0105\u017Ck\u0119
 title.application=Moje ksi\u0105\u017Cki
 add.button=Dodaj
+delete.button=Usu\u0144
 
 #Categories
 add.category=Dodaj kategori\u0119
