Moja biblioteczka - lesson 36 (Edit Category in DB)

--- a/src/main/resources/JavaFX/MojaBiblioteczka/Bundles/messages.properties
+++ b/src/main/resources/JavaFX/MojaBiblioteczka/Bundles/messages.properties
@@ -5,6 +5,7 @@ add.book=Add book
 title.application=My Books
 add.button=Add
 delete.button=Delete
+edit.button=Edit
 
 #Categories
 add.category=Add category
@@ -24,7 +25,11 @@ alwaysOnTop=Always on top
 help=Help
 about=About
 
-#Utils
+#Dialogs
+edit.title=Edit
+edit.header=Edit
+edit.content=Enter new value
+
 about.title=About...
 about.header=My Library, version 1.0
 about.content=My Java exercise based on youTube channel "ZacznijProgramowac"
