--- a/src/main/resources/JavaFX/MojaBiblioteczka/Bundles/messages_pl.properties
+++ b/src/main/resources/JavaFX/MojaBiblioteczka/Bundles/messages_pl.properties
@@ -5,6 +5,7 @@ add.book=Dodaj ksi\u0105\u017Ck\u0119
 title.application=Moje ksi\u0105\u017Cki
 add.button=Dodaj
 delete.button=Usu\u0144
+edit.button=Edycja
 
 #Categories
 add.category=Dodaj kategori\u0119
@@ -24,7 +25,11 @@ alwaysOnTop=Zawsze na wierzchu
 help=Pomoc
 about=O aplikacji
 
-#Utils
+#Dialogs
+edit.title=Edycja
+edit.header=Edycja
+edit.content=Wprowad\u017A now\u0105 warto\u015B\u0107
+
 about.title=O aplikacji
 about.header=Moja biblioteczka, wersja 1.0
 about.content=Moje \u0107wiczenie w javie na podstawie kana\u0142u youtube "ZacznijProgramowac".
