Moja biblioteczka - lesson 39 (adding Author)

--- a/src/main/resources/JavaFX/MojaBiblioteczka/Bundles/messages.properties
+++ b/src/main/resources/JavaFX/MojaBiblioteczka/Bundles/messages.properties
@@ -11,6 +11,10 @@ edit.button=Edit
 add.category=Add category
 choose.category=Choose category
 
+#Author
+add.author=Add author
+name.author=Name
+surname.author=Surname
 
 #MenuBar
 #
