Moja biblioteczka - lesson 43 (adding addBook form)

--- a/src/main/resources/JavaFX/MojaBiblioteczka/Bundles/messages.properties
+++ b/src/main/resources/JavaFX/MojaBiblioteczka/Bundles/messages.properties
@@ -16,6 +16,15 @@ add.author=Add author
 name.author=Name
 surname.author=Surname
 
+#Books
+category.book=Category
+author.book=Author
+desc.book=Description
+rating.book=Rating
+isbn.book=ISBN
+release.book=Date Release 
+
+
 #MenuBar
 #
 file=File
