--- a/src/main/resources/JavaFX/MojaBiblioteczka/Bundles/messages.properties
+++ b/src/main/resources/JavaFX/MojaBiblioteczka/Bundles/messages.properties
@@ -6,6 +6,7 @@ title.application=My Books
 add.button=Add
 delete.button=Delete
 edit.button=Edit
+save.button=Save
 
 #Categories
 add.category=Add category
