BlackJackFx - Card's animation

--- a/src/main/java/Z_inne/TODO.txt
+++ b/src/main/java/Z_inne/TODO.txt
@@ -1,3 +1,5 @@
 Blackjack_FX - zapis aktualnego wyniku do pliku tekstowego. W menu głównym wybór: nowa grs czy kontynuacja.
 
 Gra w statki
+
+Obsługa kontrolki  Animacja w BlackJackFX
