Izak - making collisions (ugly)

--- a/src/main/java/Z_inne/TODO.txt
+++ b/src/main/java/Z_inne/TODO.txt
@@ -3,3 +3,5 @@ Blackjack_FX - zapis aktualnego wyniku do pliku tekstowego. W menu głównym wyb
 Gra w statki
 
 Obsługa kontrolki  Animacja w BlackJackFX
+
+Spring Boot
